fixing button on mobile

--- a/assets/css/hoabean.css
+++ b/assets/css/hoabean.css
@@ -21,10 +21,10 @@
         height: 20rem;
         margin-bottom: 1cm;
         font-family: 'Roboto', sans-serif;
-        font-size: 24px;
+        font-size: 50px;
         background-color: #3b220f;
         color: white;
-        margin-bottom: 5rem;
+        margin: 8rem;
         border: none;
     
     }
